# binance-trade-bot

./: .gitignore  backtest_doge_1year.py  compare_strategies.md  main.py  pyproject.toml  quick-start.sh  requirements.txt  run_backtest.py  run_futures_testnet.py  run_spot_backtest.py  run_spot_backtest_cross.py  run_spot_backtest_risk.py  start_bot.sh  supported_coin_list  warm_cache.py  启动指南.md  策略优化建议.md
binance_trade_bot/: __main__.py  auto_trader.py  backtest.py  binance_api_manager.py  binance_futures_api_manager.py  binance_stream_manager.py  config.py  crypto_trading.py  database.py  futures_backtest.py  notifications.py  spot_backtest.py
binance_trade_bot/models/: __init__.py  position_state.py
binance_trade_bot/strategies/: atr_trailing_strategy.py  cross_sectional_strategy.py  futures_multi_coin_strategy.py  futures_risk_managed_strategy.py  risk_managed_strategy.py  test.md
deploy/: start_bot.sh  switch_node.sh
